# raylib-vcpkg-template

./: .gitignore  CMakeLists.txt  CMakePresets.json
Include/: Temp.h
Source/: Temp.cpp
